<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <group android:checkableBehavior="single">
        <item android:icon="@drawable/ic_menu_principal" android:id="@+id/nav_principal" android:title="@string/menu_principal"/>
        <item android:icon="@drawable/ic_menu_servicos" android:id="@+id/nav_servicos" android:title="@string/menu_servicos"/>
        <item android:icon="@drawable/ic_menu_clientes" android:id="@+id/nav_clientes" android:title="@string/menu_clientes"/>
        <item android:icon="@drawable/ic_menu_contato" android:id="@+id/nav_contato" android:title="@string/menu_contato"/>
        <item android:icon="@drawable/ic_menu_sobre" android:id="@+id/nav_sobre" android:title="@string/menu_sobre"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_frutas_1" android:title="@string/menu_frutas_1"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_frutas_2" android:title="@string/menu_frutas_2"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_frutas_3" android:title="@string/menu_frutas_3"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_sala_aula_1" android:title="@string/menu_sala_1"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_cozinha_1" android:title="@string/menu_cozinha_1"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_restaurante" android:title="@string/menu_restaurante"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_sala_estar" android:title="@string/menu_sala_estar"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_numbers_1" android:title="@string/menu_numbers_1"/>
        <item android:icon="@drawable/ic_menu_conteudo" android:id="@+id/nav_numbers_2" android:title="@string/menu_numbers_2"/>
    </group>
</menu>
